--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"electron-store": "^8.0.0",
 		"electron-unhandled": "^3.0.2",
 		"electron-updater": "^4.3.8",
-		"electron-util": "^0.15.1"
+		"electron-util": "^0.15.1",
+		"ini": "^2.0.0",
+		"steamapi": "^2.2.0"
 	},
 	"devDependencies": {
 		"electron": "^12.0.6",
