--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
 		"release": "np"
 	},
 	"dependencies": {
+		"@terascope/fetch-github-release": "^0.8.7",
+		"bootstrap": "^5.1.3",
 		"electron-context-menu": "^3.0.0",
 		"electron-debug": "^3.2.0",
 		"electron-store": "^8.0.0",
 		"electron-unhandled": "^3.0.2",
 		"electron-updater": "^4.3.8",
 		"electron-util": "^0.15.1",
+		"events": "^3.3.0",
 		"ini": "^2.0.0",
+		"jquery": "^3.6.0",
+		"popper.js": "^1.16.1",
 		"steamapi": "^2.2.0"
 	},
 	"devDependencies": {
