--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"release": "np"
 	},
 	"dependencies": {
-		"@terascope/fetch-github-release": "^0.8.7",
+		"adm-zip": "^0.5.9",
 		"bootstrap": "^5.1.3",
 		"electron-context-menu": "^3.0.0",
 		"electron-debug": "^3.2.0",
@@ -32,7 +32,7 @@
 		"ini": "^2.0.0",
 		"jquery": "^3.6.0",
 		"popper.js": "^1.16.1",
-		"steamapi": "^2.2.0"
+		"request": "^2.88.2"
 	},
 	"devDependencies": {
 		"electron": "^12.0.6",
